<resources>
    <string name="app_name">Weather</string>
    <string name="temperature" translatable="false">10</string>
    <string name="celsius" translatable="false">°C</string>
    <string name="fahrenheit" translatable="false">°F</string>
    <string name="weatherType">Sunny</string>
    <string name="day1">Monday</string>
    <string name="day2">Tuesday</string>
    <string name="day3">Wednesday</string>
    <string name="day4">Thursday</string>
    <string name="day5">Friday</string>
    <string name="day6">Saturday</string>
    <string name="day7">Sunday</string>
    <string name="weather1" translatable="false">12℃</string>
    <string name="weather2" translatable="false">11℃</string>
    <string name="weather3" translatable="false">6℃</string>
    <string name="weather4" translatable="false">10℃</string>
    <string name="weather5" translatable="false">11℃</string>
    <string name="weather6" translatable="false">8℃</string>
    <string name="weather7" translatable="false">7℃</string>
    <string name="location">Saint-Petersburg</string>
    <string name="chooseCity">Cities</string>
    <string name="city">Saint-Petersburg</string>
    <string name="addCity">Add City</string>
    <string name="search">Search</string>
    <string name="popular_cities">Popular cities:</string>
    <string name="new_york">New York</string>
    <string name="paris">Paris</string>
    <string name="london">London</string>
    <string name="tokyo">Tokyo</string>
    <string name="rome">Rome</string>
    <string name="dubai">Dubai</string>
    <string name="moscow">Moscow</string>
    <string name="sydney">Sydney</string>
    <string name="hong_kong">Hong Kong</string>
    <string name="settings">Settings</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="language_title">Language</string>
    <string name="language1">English</string>
    <string name="language2">Russian</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>