<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp">

            <ImageView
                android:id="@+id/backIcon"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:srcCompat="@drawable/back"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addCity"
                android:textSize="40sp"
                android:textColor="@color/text"
                android:layout_weight="200" />

        </LinearLayout>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/search"
            android:textSize="25sp"
            android:autofillHints=""
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/popular_cities"
            android:textColor="@color/text"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_york"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    style="@style/CardView"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/paris"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    style="@style/CardView"
                    android:layout_weight="1"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/london"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    style="@style/CardView"
                    android:layout_weight="1"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tokyo"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    style="@style/CardView"
                    android:layout_weight="1"
                    android:background="@color/white" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rome"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    style="@style/CardView"
                    android:layout_weight="1"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dubai"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    style="@style/CardView"
                    android:layout_weight="1"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/moscow"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    style="@style/CardView"
                    android:layout_weight="1"
                    android:background="@color/white" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hong_kong"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    style="@style/CardView"
                    android:layout_weight="1"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sydney"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    style="@style/CardView"
                    android:layout_weight="1"/>

            </TableRow>

        </TableLayout>
    </LinearLayout>

</ScrollView>